# doc/openapi.yaml
@@ -2,8 +2,6 @@ openapi: "3.0.0"
 info:
   version: 1.0.0
   title: Book Searcher
-security:
-  - ApiKeyAuth: []
 servers:
   - url: http://localhost:8080
 paths:
@@ -16,6 +14,8 @@ paths:
 
   /books/{isbn}:
     get:
+      security:
+        - ApiKeyAuth: []
       summary: Info for books
       tags:
         - book
@@ -37,6 +37,8 @@ paths:
                 $ref: "#/components/schemas/BooksSearchBody"
         '400':
           description: Bad request. isbn must be composed of delimiter comma.
+        '401':
+           $ref: "#/components/responses/UnauthorizedError"
         default:
           description: unexpected error
           content:
@@ -44,6 +46,9 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
 components:
+  responses:
+    UnauthorizedError:
+      description: API key is missing or invalid
   securitySchemes:
     ApiKeyAuth:        # arbitrary name for the security scheme
       type: apiKey
